--- a/app/src/content/jcr_root/apps/dx/adobe-fonts/header/header.html
+++ b/app/src/content/jcr_root/apps/dx/adobe-fonts/header/header.html
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
-<sly data-sly-use.tag="com.adobe.www.dx.fonts.Tag" data-sly-test="${tag.id}">
+<sly data-sly-use.tag="com.adobe.dx.admin.config.fonts.Tag" data-sly-test="${tag.id}">
     <!--/* Default Link Tag Embed */-->
     <link data-sly-test="${tag.embedType == 'linkTag'}" 
           rel="stylesheet" href="${'{0}/{1}.css' @ format = [tag.url, tag.id], context = 'uri'}" />
